SERVER-57069 Make tenant migration donor also check instance token when checking abort token